--- a/Countdown Timer/style.css
+++ b/Countdown Timer/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -10,4 +12,30 @@
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+}
+.year {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.year h1 {
+  font-size: 5rem;
+  font-weight: 500;
+}
+.timer {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  text-align: center;
+}
+.timer h2 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+.timer h4 {
+  font-size: 2rem;
+  font-weight: 400;
 }
